--- a/index - Copy.html
+++ b/index - Copy.html
@@ -37,13 +37,13 @@
 
     <script>
         var data = [
-        {  "name":"sholto", "value":1,},
-        {  "name":"chris", "value":77586,},
-        {  "name":"oli", "value":1,},
-        {  "name":"tom ", "value":1,},
-        {  "name":"galen", "value":1,},
-        {  "name":"mitchell", "value":1,},
-        {  "name":"kacy", "value":25417,}];
+            {  "name": "Sholto", "value": 0,},
+            {"name": "Chris","value": 0,},
+            {"name": "Oli", "value": 0,},
+            {"name": "Tom", "value": 0,},
+            {"name": "Galen","value": 0,},
+            {"name": "Mitchell", "value": 0,},
+            {"name": "Kacy","value":0,}];
 
         //sort bars based on value
         data = data.sort(function (a, b) {
