--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
      let year = 2000;
     
-  d3.csv('https://github.com/sholtodouglas/heartRateChallenge/blob/master/category-brands.csv').then(function(data) {
+  d3.csv('https://cors-anywhere.herokuapp.com/https://github.com/sholtodouglas/heartRateChallenge/blob/master/category-brands.csv').then(function(data) {
     //if (error) throw error;
       
       console.log(data);
