--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Simple Bar chart</title>
+    <title>PAS Heartrate Challenge</title>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <style>
         body {
