--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         {  "name":"sholto", "value":9755,},
         {  "name":"chris", "value":8106,},
         {  "name":"oli", "value":6781,},
+        {  "name":"alec", "value":3747,},
         {  "name":"mia", "value":7955,},
         {  "name":"galen", "value":4509,},
         {  "name":"kacy", "value":4266,}];
